# TBT

./: .clang-format  CMakeLists.txt  LICENSE  README.md
include/TBT/: TBT  compiler.hpp  defines.hpp  execute.hpp  helper.hpp  magic.hpp
include/TBT/common/: defines.hpp  static_string.hpp
include/TBT/execute/: composite.hpp  decorator.hpp  helper.hpp  meta.hpp  states.hpp  task.hpp
include/TBT/ext/strtonum/: StrToNum.hpp
include/TBT/glaze/: inline.hpp  to_tuple.hpp  tuple.hpp  type_traits.hpp
include/TBT/strtonum/: StrToNum.ixx
include/TBT/tools/: builder.hpp  compiler.hpp  execute.hpp  helper.hpp
tests/: CMakeLists.txt
tests/include/: states.hpp
tests/src/: test.cpp  test_builder_util.cpp  tests.cpp
